--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.1",
-    "notion-client>=2.3.0",
     "passlib[argon2]>=1.7.4",
     "pydantic>=2.11.5",
     "pyjwt>=2.10.1",
+    "selenium>=4.33.0",
 ]
