--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.1",
+    "loguru>=0.7.3",
     "passlib[argon2]>=1.7.4",
     "pydantic>=2.11.5",
     "pyjwt>=2.10.1",
