--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ blinker==1.9.0
 certifi==2025.6.15
 cffi==1.17.1
 click==8.2.1
+colorama==0.4.6
 flask==3.1.1
 h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
 jinja2==3.1.6
+loguru==0.7.3
 markupsafe==3.0.2
 outcome==1.3.0.post0
 passlib==1.7.4
@@ -29,4 +31,5 @@ typing-inspection==0.4.1
 urllib3==2.4.0
 websocket-client==1.8.0
 werkzeug==3.1.3
+win32-setctime==1.2.0
 wsproto==1.2.0
